# mousecoords

./: .gitignore  README.md  coords.py  dimension_mini.py  install.sh  pyproject.toml  requirements.txt
mousecoords/: __init__.py  __main__.py  automator.py  bundles.py  cli.py  config.py  demo.py  doctor.py  inspector.py  overlay.py  recorder.py  runtime.py  screen.py  state_machine.py  studio.py  tui.py  vision.py  watcher.py
mousecoords/backends/: __init__.py  fixtures.py  input.py  screen.py  window.py
profiles/: antimatter_dimensions.yaml
profiles/calculator/: profile.yaml
profiles/desktop_demo/: profile.yaml
tests/: conftest.py  test_bundles.py  test_cli.py  test_cli_help.py  test_config.py  test_config_v2.py  test_demo.py  test_doctor.py  test_fixture_screen.py  test_inspector.py  test_profile_migration.py  test_recorder.py  test_runtime.py  test_screen.py  test_state_machine.py  test_studio.py  test_vision.py  test_vision_fixture.py  test_watcher.py
